Figuring out mobile spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width:500px) {
+  .container {
+    width: 90%;
+  }
+}
 .navigation-bar {
   border-bottom: 2px dashed #C0C0C0;
   width: 100%;
@@ -186,6 +191,15 @@ img {
   color: #212529;
   font-size: 1.5rem;
   padding: 0 1rem;
+}
+@media (max-width:500px) {
+  .navigation-bar .inner-box {
+    width: 100%;
+    padding: 2rem 0 0;
+    margin: 0 auto;
+    flex-direction: column;
+    font-size: 4rem;
+  }
 }
 .footer {
   width: 100%;
@@ -221,8 +235,23 @@ img {
 .home .content-section .img-content img {
   border-radius: 10px;
 }
+@media (max-width:500px) {
+  .home .content-section {
+    width: 100%;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+}
 .home .inverse-content {
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width:500px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -250,11 +279,26 @@ img {
 .home .content-destination img {
   border-radius: 10px;
 }
+@media (max-width:500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width:500px) {
+  .home .content-pick {
+    width: 100%;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 }
 .home .content-pick .destination {
   width: 30%;
