--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,7 @@
     .text-content{
       margin-top:30px;
     }
+    
 
   }
 
@@ -15,7 +16,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+
+
+  
     
     .text-content {
       width: 48%;
@@ -30,10 +33,23 @@
         border-radius: 10px;
       }
     }
+
+    @media @mobile{
+      .mobileLayout();
+
+    }
+
+
   }
 
   .inverse-content {
     .sectionBorder();
+
+    @media @mobile{
+     flex-direction: column-reverse;
+
+    }
+
 
     .text-content {
       padding-left: 1%;
@@ -57,6 +73,10 @@
     img {
       border-radius: 10px;
     }
+
+    @media @mobile{
+      width:100%;
+    }
   }
 
   .content-pick {
@@ -64,6 +84,10 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+
+    @media @mobile{
+      .mobileLayout();
+    }
 
     .destination {
       width: 30%;
