--- a/less/mixins.less
+++ b/less/mixins.less
@@ -28,3 +28,20 @@
     padding: 15px 0;
     text-align:center;
 }
+
+.columnNav(){
+    width:100%;
+    padding:2rem 0 0;
+    margin: 0 auto;
+    flex-direction: column;
+    font-size:4rem;
+}
+
+.mobileLayout(){
+    width:100%;
+    flex-direction:column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
