--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,4 +18,10 @@
         padding:0 1rem;
     }
 
+    @media @mobile{
+
+        .inner-box{
+            .columnNav();
+        }
+    }
 }
